--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -4,6 +4,7 @@
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207188.md#1" target="_blank">菅义伟表示不竞选自民党总裁 日相将换人</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207188.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12982617-GettyImages-1233150593-150x120.jpg" align ="left"></a>日本首相菅义伟周五（9月3日）在自民党的临时会议中表示，他不会参加自民党总裁选举，这也意味着，到了本月底任期结束时，他也将辞去日本首相职务。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 2:41 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/24/n13183383.md#1" target="_blank">【独家】陕西“千人计划”名单曝光</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/24/n13183383.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/shutterstock_1651369351-150x120.jpg" align ="left"></a>自三年前美国政府开始反制中共不当获取外国先进技术后，旨在引进海外人才的“千人计划”就从中共大外宣中销声匿迹，甚至在国内被全面屏蔽。不过大纪元所获内部文件揭示了中共依然透过“千人计划”大量搜罗海外人才，并利诱外国专家“转化”科研成果，或向中企“转移”技术。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 1:32 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205604.md#1" target="_blank">【一线采访】大陆培训机构倒闭 家长维权难</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205604.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-107502021-150x120.jpg" align ="left"></a>近来，在《双减》政策冲击下，大陆校外培训行业迎来倒闭潮。日前，曾与培训教育有关的家长、学生和校长接受大纪元采访，讲述他们的故事，曝光背后内幕。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 12:25 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206196.md#1" target="_blank">加拿大2021年大选 自由党出台竞选纲领</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206196.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206328-CP131485571-150x120.jpg" align ="left"></a>9月1日，加拿大自由党公布了名为“向前，为了每一个人”（Forward, For Everyone）的竞选纲领。根据该纲领，联邦政府将新增780亿加元的开销，以解决诸多长期存在的政策、决策问题；以及在过去的19个月间由于COVID大流行带来的新课题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 12:08 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13206641.md#1" target="_blank">近期多名法轮功学员遭中共绑架后死亡</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13206641.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/1-136-150x120.jpg" align ="left"></a>近期，多名法轮功学员在被绑架后短期内，被中共迫害致死。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 10:42 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206198.md#1" target="_blank">美F-35B战机将登上日本轻航母 剑指中共</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206198.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/06/190611-N-AB123-0002-150x120.jpg" align ="left"></a>美国海军陆战队司令伯杰（David Berger）将军周三（9月1日）表示，今年晚些时候，美国海军陆战队F-35B闪电II型联合攻击战斗机将登上日本改装后的出云级护卫舰，即轻航母。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 10:37 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13203997.md#1" target="_blank">【内幕】当局清洗政法委 文件泄辽宁敷衍了事</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13203997.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13204036-2-bei-jing-GettyImages-187734702-150x120.jpg" align ="left"></a>近日，大纪元获得内部文件，泄露了中共辽宁当局在“扫黑除恶”运动中走过场，敷衍了事。同时，文件也泄露在这场运动中被抓的部分凌海市政法官员，不仅是黑、恶势力“保护伞”，还是在高层督办下才落马的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 9:00 AM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13202475.md#1" target="_blank">澳驻美大使：中共胁迫的危害甚于911恐袭</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13202475.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/20191018001427264745-original-150x120.jpg" align ="left"></a>911恐袭20周年纪念日前夕，澳洲驻美大使辛纳迪诺斯（Arthur Sinodinos）表示，中共带来的威胁更甚于恐怖主义，美军从阿富汗撤离后，会进一步将战略重心向印太地区转移，两国会加深合作反击中共胁迫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 5:36 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201633.md#1" target="_blank">2021汽车质量排名最高的23款车型</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201633.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/12/GettyImages-142471920-150x120.jpg" align ="left"></a>根据一项颇具影响力的研究的结果，公羊皮卡（Ram truck）和面包车（Ram van）品牌，击败了所有其他汽车，成为2021年质量最高的汽车品牌。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 1:46 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201563.md#1" target="_blank">沈舟：美军透露西太平洋作战的最后拼图</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201563.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13201629-E91oU-EVQAEYKgv_cut-150x120.jpg" align ="left"></a>8月27日，应该是美军“大规模演习”（Large Scale Global Exercise 21, LSGE21）的最后一天。近日，美国印太司令部发布了一系列图片。截止8月31日，美军在西太平洋以中共为假想敌的作战计划，大致完成了最后的拼图。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 1:35 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201492.md#1" target="_blank">反活摘世界峰会9月举行 19国专家将与会</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201492.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13201615-20210910-150x120.jpeg" align ="left"></a>9月联合国大会召开期间，5个来自欧美亚洲的非政府组织，联合举办“打击及防制活摘器官之世界峰会”（简称“反活摘世界峰会”），将在9月中旬拉开序幕，共计19国35位社会各界精英与会；峰会针对中共活摘器官暴行对人类各方面影响讨论分析，并提出打击及防制活摘器官具体做法。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 12:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zeqdou3554/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zeqdou3554/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/zeqdou3554/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
